--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bullsimpact</title>
     <link rel="icon" type="image/png" href="images/logo.png">
-    <link rel="stylesheet"  href="Bullsimpact.css">
+    <link rel="stylesheet"  href="css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
