--- a/index.html
+++ b/index.html
@@ -198,10 +198,22 @@
 			</div>
 
 		</div>
-
+                    
 	</div>
 </section>
+<!-- ------socialize---- -->
+<div class="social">
+    <div class="next">
+        <ul>
+            <li><a href> <i class="fa fa-instagram" aria-hidden="true"></i> </a>instagram</li>
+            <li><a href> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>facebook</li>
+            <li><a href> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>twitter</li>
+            <li><a href> <i class="fa fa-youtube-play" aria-hidden="true"></i></a>youtube</li>
+            <li><a href> <i class="fa fa-linkedin" aria-hidden="true"></i></a>linkedIn</li>
 
+        </ul>
+    </div>
+</div>
  
 <!------foooter------>
         <div class="footer">
