--- a/index.html
+++ b/index.html
@@ -198,27 +198,30 @@
 			</div>
 
 		</div>
-                    
+
 	</div>
 </section>
-<!-- ------socialize---- -->
-<div class="social">
-    <div class="next">
-        <ul>
-            <li><a href> <i class="fa fa-instagram" aria-hidden="true"></i> </a>instagram</li>
-            <li><a href> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>facebook</li>
-            <li><a href> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>twitter</li>
-            <li><a href> <i class="fa fa-youtube-play" aria-hidden="true"></i></a>youtube</li>
-            <li><a href> <i class="fa fa-linkedin" aria-hidden="true"></i></a>linkedIn</li>
-
-        </ul>
-    </div>
-</div>
+<!-- socialize -->
  
+
 <!------foooter------>
         <div class="footer">
             <div class="container">
                 <div class="row">
+
+                    <div class="social">
+                        <h1>Socialize</h1>
+                         <ul>
+                            <li><a href=""> <i class="fa fa-instagram" aria-hidden="true"></i></a> </li>
+                            <li><a href> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a> </li>
+                            <li><a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                            <li><a href> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>   </li>
+                            <li><a href> <i class="fa fa-youtube-play" aria-hidden="true"></i></a> </li>
+                 
+                        </ul>
+                    </div>
+
+
                     <div class="column-fot1">
                         <h3>Download our app </h3>
                         <p>Download app for android and for ios devices.</p>
