--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bullsimpact</title>
+     <title>Bullsimpact</title>
     <link rel="icon" type="image/png" href="images/logo.png">
     <link rel="stylesheet"  href="css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
-<body>
+<body> 
     
   <!--------section 1-----> 
     <div class="header">
@@ -30,7 +29,7 @@
                <div class="menu-icon"><i class="fa fa-bars" aria-hidden="true" onclick="menutoggle()"></i></div>
             </div>
 <!----------section 2----------->
-                <div class="row">
+                <div class="rowd">
                     <div class="sec2">
                         <h1>Learn to trade in most<br> simplified way.</h1> 
                         <p> Bulls Impact Academy is the best stock market<br> institute which provides the most simplified<br> and to the point stock market course<br> from the scratch for the beginners.</p>
