--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
 				</div>
 					<div class="text">
 						<h3>Address</h3>
-						<p>Gorewada nagpur-440013</p>
+						<p>Police line takli, nagpur-440013</p>
 					</div>    
 			</div>    
 			<div class="box">
 				<div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
 					<div class="text">
 						<h3>Phone no.</h3>
-						<p>7276643227</p>
+						<p>7020782337</p>
 					</div>    
 			</div>    
 			<div class="box">
 				<div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i>
 				</div>
 					<div class="text">
-						<h3>email</h3>
-						<p>ritikingle.9689@gmail.com</p>
+						<h3>Email</h3>
+						<p>bullsimpacts@gmail.com</p>
 					</div>    
 			</div>    
 	    </div>
@@ -212,10 +212,10 @@
                     <div class="social">
                         <h1>Socialize</h1>
                          <ul>
-                            <li><a href=""> <i class="fa fa-instagram" aria-hidden="true"></i></a> </li>
-                            <li><a href> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a> </li>
+                            <li><a href="https://instagram.com/bullsimpact?igshid=14qkhzlo1f3pt"> <i class="fa fa-instagram" aria-hidden="true"></i></a> </li>
+                            <li><a href="https://www.facebook.com/bulls.impact/about"> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a> </li>
                             <li><a href=""><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
-                            <li><a href> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>   </li>
+                            <li><a href="https://twitter.com/BullsImpact?s=09"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>   </li>
                             
                  
                         </ul>
