--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="small-container">
                 <div class="row">
                     <div class="colm">
-                        <img class="colm-img" src="images/enrol-img.jpg">
+                        <img src="images/enrol-img.jpg">
                     </div>
                     <div class="colm">
                         <p>INDIA'S NO. 1 STOCK MARKET COURSE</p>
@@ -86,7 +86,7 @@
             </div>
 
         </div>
-<!-------comment section 5---->        
+<!-------feedback section 5---->        
         <div class="comment-section">
             <h2 class="title-comment">Feedback </h2>
             <div class="container">
